<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@android:dimen/app_icon_size">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_20sp"
            android:padding="@dimen/padding_size_16"
            android:text="@string/sign_up_new_user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"
            android:text="@string/sign_up_username"
            android:id="@+id/sign_up_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"
            android:text="@string/sign_up_user_phone"
            android:id="@+id/sign_up_user_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"
            android:text="@string/sign_up_user_pass"
            android:id="@+id/sign_up_user_pass" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"
            android:text="@string/sign_up_user_confirm_pass"
            android:id="@+id/sign_up_user_confirm_pass" />

        <Button
            android:id="@+id/new_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reset"
            android:background="@drawable/blue_round"
            android:hint="@string/next"
            android:padding="@dimen/padding_size_16"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginBottom="@dimen/padding_size_16"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>