<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/appicon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="16sp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appicon"
                android:padding="16dp"
                android:text="@string/companyname"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name"
                android:padding="16dp"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:hint="@string/pass"
                android:inputType="numberPassword"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pin"
                android:hint="@string/forgotpass"
                android:padding="16dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reset"
                android:background="@drawable/blue_round"
                android:hint="@string/next"
                android:padding="16dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/proceed"
                android:hint="@string/sign_up"
                android:padding="16dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_user"
                android:hint="@string/terms"
                android:padding="16dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_user"
                android:layout_toRightOf="@+id/terms"
                android:hint="@string/contact"
                android:padding="16dp"
                android:textAlignment="viewEnd"
                android:textSize="12sp" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>