<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@android:dimen/app_icon_size"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPass"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_pass_value"
            android:hint="@string/sign_up_user_phone"
            android:gravity="center"
            android:padding="@dimen/padding_size_16"/>

        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/resetPass"-->
        <!--            android:gravity="center"-->
        <!--            android:padding="@android:dimen/status_bar_system_icon_size"/>-->
        <Button
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_round"
            android:hint="@string/next"
            android:padding="@dimen/padding_size_16"
            android:textSize="@dimen/text_size_20sp"
            android:layout_marginBottom="@dimen/padding_size_16"/>

<!--        <com.google.android.gms.ads.AdView-->
<!--            android:id="@+id/adView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:adSize="BANNER"-->
<!--            app:adUnitId="ca-app-pub-3940256099942544/6300978111"/>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>